Fix image source URLs and update alt text

--- a/index.html
+++ b/index.html
@@ -167,15 +167,15 @@
                 </p>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8 border-t pt-8">
                     <div class="space-y-1">
-                        <img src="Screenshot 2026-02-14 08.16.11.png" alt="A1" class="w-full h-32 object-contain bg-gray-50 border rounded">
+                        <img src="Screenshot%202026-02-14%2008.16.11.png" alt="A1" class="w-full h-32 object-contain bg-gray-50 border rounded">
                         <p class="text-[8px] uppercase text-gray-400">RVV A1 (50km/h)</p>
                     </div>
                     <div class="space-y-1">
-                        <img src="Screenshot 2026-02-14 08.15.53.png" alt="Streetview" class="w-full h-32 object-cover bg-gray-50 border rounded">
+                        <img src="Screenshot%202026-02-14%2008.15.53.png" alt="Streetview" class="w-full h-32 object-cover bg-gray-50 border rounded">
                         <p class="text-[8px] uppercase text-gray-400">Streetview</p>
                     </div>
                     <div class="space-y-1">
-                        <img src="Screenshot 2026-02-14 08.15.26.png" alt="Maps" class="w-full h-32 object-cover bg-gray-50 border rounded">
+                        <img src="Screenshot%202026-02-14%2008.15.26.png" alt="Maps Overzicht" class="w-full h-32 object-cover bg-gray-50 border rounded">
                         <p class="text-[8px] uppercase text-gray-400">Maps Overzicht</p>
                     </div>
                 </div>
