Update images and styling in index.html

--- a/index.html
+++ b/index.html
@@ -158,22 +158,22 @@
                 </ul>
             </div>
 
-            <div class="bg-white border-b-4 police-border p-8 mb-12 text-center shadow-sm">
-                <h2 class="text-[10px] font-black uppercase text-blue-900 mb-3 tracking-widest">Bericht Operationeel Centrum</h2>
+            <div class="bg-white border-b-4 police-border p-8 mb-12 shadow-sm">
+                <h2 class="text-[10px] font-black uppercase text-blue-900 mb-3 tracking-widest text-center">Bericht Operationeel Centrum</h2>
                 <p class="italic text-lg text-gray-700 leading-relaxed mb-6 text-center">
                     “Wilt u gaan naar kruising Vincent van Goghweg met de Westzijde, 1506 GC Zaandam. Hier is een motorrijder gevallen. Het slachtoffer is aanspreekbaar en heeft mogelijk letsel. De ambulance is onderweg en u heeft toestemming.”
                 </p>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8 border-t pt-8">
                     <div class="space-y-1 text-center">
-                        <img src="Screenshot%202026-02-14%2008.16.11.png" alt="A1" class="mx-auto w-full h-32 object-contain bg-gray-50 border rounded">
+                        <img src="bord50.png" alt="A1" class="mx-auto w-full h-32 object-contain bg-gray-50 border rounded">
                         <p class="text-[8px] uppercase text-gray-400 font-bold">RVV A1 (50km/h)</p>
                     </div>
                     <div class="space-y-1 text-center">
-                        <img src="Screenshot%202026-02-14%2008.15.53.png" alt="Streetview" class="mx-auto w-full h-32 object-cover bg-gray-50 border rounded">
+                        <img src="kruispuntgooglemaps.png" alt="Streetview" class="mx-auto w-full h-32 object-cover bg-gray-50 border rounded">
                         <p class="text-[8px] uppercase text-gray-400 font-bold">Streetview</p>
                     </div>
                     <div class="space-y-1 text-center">
-                        <img src="Screenshot%202026-02-14%2008.15.26.png" alt="Maps Overzicht" class="mx-auto w-full h-32 object-cover bg-gray-50 border rounded">
+                        <img src="overzichtkruispunt.png" alt="Maps Overzicht" class="mx-auto w-full h-32 object-cover bg-gray-50 border rounded">
                         <p class="text-[8px] uppercase text-gray-400 font-bold">Maps Overzicht</p>
                     </div>
                 </div>
