Update image captions in index.html

--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
                 </div>
                 <div class="text-center">
                     <img src="kruispuntgooglemaps.png" class="h-28 mx-auto object-cover border rounded shadow-sm">
-                    <p class="text-[8px] mt-2 font-bold text-gray-400 uppercase">Zicht vanaf Westzijde</p>
+                    <p class="text-[8px] mt-2 font-bold text-gray-400 uppercase">luchtfoto kruispunt</p>
                 </div>
                 <div class="text-center">
                     <img src="overzichtkruispunt.png" class="h-28 mx-auto object-cover border rounded shadow-sm">
-                    <p class="text-[8px] mt-2 font-bold text-gray-400 uppercase">Luchtfoto kruising</p>
+                    <p class="text-[8px] mt-2 font-bold text-gray-400 uppercase">zicht vanaf westzijde</p>
                 </div>
              </div>
         </section>
